--- a/teaching/300/300notes/ltx-article.css
+++ b/teaching/300/300notes/ltx-article.css
@@ -87,6 +87,13 @@ section > .ltx_title +.ltx_date +.ltx_para > .ltx_p {text-indent:0em; }
   background: #fff;
 }
 
+.half-answer-space {
+  height: 400px;           /* 100px vertical space */
+  margin-top: 0.75rem;
+  margin-bottom: 1.5rem;
+  background: #fff;
+}
+
 /* Screen-reader-only text */
 .sr-only {
   position: absolute;
