Update ltx-article.css for bold h3 weights

--- a/teaching/300/300notes/ltx-article.css
+++ b/teaching/300/300notes/ltx-article.css
@@ -1,4 +1,5 @@
 .ltx_document {font-family: "Arial"}
+.ltx_text {font-weight: "bold"}
 .ltx_title_document      { font-size:170%; text-align:center; margin:0.5em 0 0.5em 0; }
 .ltx_authors,
 .ltx_role_author         { text-align:center; margin:0.5em 0 0.5em 0; }
