--- a/teaching/300/300readings/ltx-article.css
+++ b/teaching/300/300readings/ltx-article.css
@@ -20,6 +20,7 @@
 .ltx_paragraph,
 .ltx_subparagraph   { margin-top:1.0em; }
 
+.ltx_tabular { margin-top:2em; margin-bottom:2em; }
 .ltx_title_appendix,
 .ltx_title_section,
 .ltx_title_bibliography  { font-size:140%; font-weight:bold; margin-bottom:1em; }
