--- a/teaching/640/axler/LaTeXML.css
+++ b/teaching/640/axler/LaTeXML.css
@@ -231,7 +231,7 @@ dl.ltx_description dl.ltx_description dd { margin-left:3em; }
 span.ltx_rowspan { position:absolute; top:0; bottom:0; }
 
 /* by default, p doesn't indent */
-.ltx_p { text-indent:0em; white-space:normal; }
+.ltx_p { margin-top:1em; margin-bottom:1em; text-indent:0em; white-space:normal; }
 /* explicit control of indentation (on ltx_para) */
 .ltx_indent > .ltx_p:first-child { text-indent:2em!important; }
 .ltx_noindent > .ltx_p:first-child { text-indent:0em!important; }
@@ -251,7 +251,7 @@ span.ltx_rowspan { position:absolute; top:0; bottom:0; }
 
 /*======================================================================
  Borders and such */
-.ltx_tabular { display:inline-table; border-collapse:collapse; }
+.ltx_tabular { margin-top:2em; margin-bottom:2em; display:inline-table; border-collapse:collapse; }
 .ltx_tabular.ltx_centering { display:table; }
 .ltx_thead,
 .ltx_tfoot,
