--- a/teaching/640/axler/LaTeXML.css
+++ b/teaching/640/axler/LaTeXML.css
@@ -157,7 +157,7 @@ table.ltx_eqn_eqnarray tr.ltx_eqn_lefteqn + tr td.ltx_align_right { min-width:2e
 .ltx_itemize .ltx_item,
 .ltx_enumerate .ltx_item {
     display: list-item; }
-
+.ltx_item {margin-top:1em; margin-bottom:1em;}
 /* Position the tag to look like a normal item bullet. */
 li.ltx_item > .ltx_tag {
     display:inline-block; margin-left:-1.5em; min-width:1.5em;
