--- a/teaching/640/axler/ltx-article.css
+++ b/teaching/640/axler/ltx-article.css
@@ -13,7 +13,7 @@
 .ltx_title_classification {
    text-align:left; font-size: 100%; font-weight:bold; margin:0.5 0 0 0; }
 
-.ltx_document { font-family: Arial; }
+.ltx_document { font-family: Arial; font-size: 16px }
 .ltx_appendix,
 .ltx_section,   
 .ltx_subsection,
