--- a/teaching/300/300notes/LaTeXML.css
+++ b/teaching/300/300notes/LaTeXML.css
@@ -58,7 +58,7 @@
                 margin-top: 0.5cm;
             }
 
-            header {
+            header:after {
                 content: "© 2026 John Weeks";
                 display: block;
                 text-align: left;
