--- a/teaching/300/300notes/LaTeXML.css
+++ b/teaching/300/300notes/LaTeXML.css
@@ -181,7 +181,7 @@ table.ltx_eqn_eqnarray tr.ltx_eqn_lefteqn + tr td.ltx_align_right { min-width:2e
     display:block; }
 .ltx_itemize .ltx_item,
 .ltx_enumerate .ltx_item {
-    display: list-item; }
+    display: list-item; margin-top: 0.5cm; margin-bottom: 0.5cm}
 
 /* Position the tag to look like a normal item bullet. */
 li.ltx_item > .ltx_tag {
